--- a/.env
+++ b/.env
@@ -4,8 +4,8 @@ NODE_ENV=development
 APP_KEY=0DLALECpuxGKNUXZMJb56y8El0qIV4zS
 DRIVE_DISK=local
 DB_CONNECTION=mysql
-MYSQL_HOST=localhost
+MYSQL_HOST=sql.freedb.tech
 MYSQL_PORT=3306
-MYSQL_USER=root
-MYSQL_PASSWORD=
-MYSQL_DB_NAME=koli
+MYSQL_USER=freedb_alpapie
+MYSQL_PASSWORD=b@s$frV7UwA3rxe
+MYSQL_DB_NAME=freedb_koli_database
