mise en place de online mysql

--- a/.env
+++ b/.env
@@ -4,8 +4,8 @@ NODE_ENV=development
 APP_KEY=0DLALECpuxGKNUXZMJb56y8El0qIV4zS
 DRIVE_DISK=local
 DB_CONNECTION=mysql
-MYSQL_HOST=sql.freedb.tech
+MYSQL_HOST=bx0tmwlhiblspdma9jmy-mysql.services.clever-cloud.com
 MYSQL_PORT=3306
-MYSQL_USER=freedb_alpapie
-MYSQL_PASSWORD=b@s$frV7UwA3rxe
-MYSQL_DB_NAME=freedb_koli_database
+MYSQL_USER=uglm2vdilfvgdbdw
+MYSQL_PASSWORD=5yxOR9dOK6Yx8Xr0cj2T
+MYSQL_DB_NAME=bx0tmwlhiblspdma9jmy
